k8s/apps/personal-website/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: personal-website
  namespace: apps
  labels:
    app: personal-website
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: personal-website
