k8s/apps/personal-website/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: personal-website
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - msdqn.dev
    - www.msdqn.dev
    secretName: personal-website-tls
  rules:
  - host: msdqn.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: personal-website
            port:
              number: 80
  - host: www.msdqn.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: personal-website
            port:
              number: 80
